Z-index fixes, removed background color from h3

--- a/Color Schemes/AppChan.css
+++ b/Color Schemes/AppChan.css
@@ -168,7 +168,6 @@ background-image: none !important;
 	.boxcontent input,
 	.boxcontent textarea,
 	.pages,
-	h3,
 	html,
 	body,
 	div.postarea>form td:nth-of-type(3)>label input,
