--- a/Color Schemes/Muted.css
+++ b/Color Schemes/Muted.css
@@ -190,7 +190,6 @@ background-image: none !important;
 	.boxcontent textarea,
 	/* >mfw I am immortalized in the source code -- sdm */
 	.pages,
-	h3,
 	html,
 	body,
 	div.postarea>form td:nth-of-type(3)>label input,
