--- a/Color Schemes/ObsidianChan.css
+++ b/Color Schemes/ObsidianChan.css
@@ -212,7 +212,6 @@
 	.boxcontent input,
 	.boxcontent textarea,
 	.pages,
-	h3,
 	div.postarea>form td:nth-of-type(3)>label input,
 	div[id^=qr],
 	table[width='100%']~#qr a#attach::after,
