--- a/Color Schemes/Tomorrow.css
+++ b/Color Schemes/Tomorrow.css
@@ -168,7 +168,6 @@
 	.boxcontent input,
 	.boxcontent textarea,
 	.pages,
-	h3,
 	html,
 	body,
 	div.postarea>form td:nth-of-type(3)>label input,
