--- a/Color Schemes/Zenburned.css
+++ b/Color Schemes/Zenburned.css
@@ -187,7 +187,6 @@ background-image: none !important;
 	.boxcontent input,
 	.boxcontent textarea,
 	.pages,
-	h3,
 	html,
 	body,
 	table[width='100%']~#qr a#attach::after,
